fix for result jumping into new line

--- a/src/app/components/implementation-view/qpu-selection/dialogs/qpu-selection-prioritization-dialog/qpu-selection-prioritization-dialog.component.scss
+++ b/src/app/components/implementation-view/qpu-selection/dialogs/qpu-selection-prioritization-dialog/qpu-selection-prioritization-dialog.component.scss
@@ -34,6 +34,6 @@ mat-expansion-panel.advancedSettings {
 }
 
 .lift-slider{
-  min-width: 95px;
+  min-width: 81px;
 }
 
